# moppu

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  release-note.md
config/: channels.example.yaml  config.example.yaml
config/prompts/: trader.system.example.md
scripts/: deploy.sh  local_collector.py  requirements-local.txt  restart.sh  secrets.py  setup.sh
scripts/systemd/: moppu-bot.service  moppu-dashboard.service  moppu-scheduler.service
src/moppu/: __init__.py  cli.py  config.py  logging_setup.py  market_calendar.py  runtime.py  runtime_overrides.py
src/moppu/agent/: __init__.py  daily_summary.py  executor.py  persona.py  prompt.py  rag.py  strategy_planner.py  trader_agent.py
src/moppu/bot/: __init__.py  telegram_bot.py
src/moppu/broker/: __init__.py  base.py  kis.py
src/moppu/embeddings/: __init__.py  embedder.py
src/moppu/ingestion/: __init__.py  transcript.py  watcher.py  youtube.py
src/moppu/llm/: __init__.py  anthropic_provider.py  base.py  factory.py  google_provider.py  openai_provider.py
src/moppu/pipeline/: __init__.py  orchestrator.py
src/moppu/storage/: __init__.py  db.py  vectorstore.py
src/moppu/web/: app.py
src/moppu/web/static/: app.js  index.html  style.css
tests/: test_chunking.py  test_config.py  test_db.py  test_kis_broker.py  test_strategy_planner.py  test_video_list.py
